--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -1,16 +1,20 @@
 {
   "loginToContinue": "Login to continue",
-  "login": "login",
-  "email": "email",
+  "login": "Login",
+  "email": "Email",
   "password": "Enter your password",
   "logout": "Logout",
-  "forgot": {
-    "forgot": "Forgot password?",
+  "forget": {
+    "forget": "Forget password?",
     "clickHere": "Click here",
-    "title": "Forgot password",
+    "title": "Forget password",
     "subTitle": "Enter your {email} to send link to reset your password.",
     "success": "We have sent a reset password to your email address",
     "send": "Send",
     "back": "Back to login"
+  },
+  "rules": {
+    "enterYourEmail": "Please enter your email",
+    "enterYourPasseord": "Please enter your password"
   }
 }
