--- a/src/locales/kh/auth.json
+++ b/src/locales/kh/auth.json
@@ -1,16 +1,20 @@
 {
-  "loginToContinue": "Login to continue",
+  "loginToContinue": "ចូលគណនីដើម្បីប្រើប្រាស់",
   "login": "ចូល",
   "email": "អ៊ីមែល",
   "password": "ពាក្យសម្ងាត់",
   "logout": "ចាកចេញ",
-  "forgot": {
-    "forgot": "ភ្លេច​ពាក្យសំងាត់​?",
-    "clickHere": "Click here",
+  "forget": {
+    "forget": "ភ្លេច​ពាក្យសំងាត់​?",
+    "clickHere": "ចុចទីនេះ",
     "title": "ភ្លេច​ពាក្យសំងាត់",
     "subTitle": "វាយ{email}ដើម្បីផ្ញើតំណដើម្បីកំណត់ពាក្យសម្ងាត់របស់អ្នកឡើងវិញ",
     "success": "កំណត់ពាក្យសម្ងាត់ឡើងវិញបានផ្ញើរួចហើយ។ សូមពិនិត្យមើលអ៊ីមែល។",
     "send": "ផ្ញើរ",
     "back": "ថយក្រោយ"
+  },
+  "rules": {
+    "enterYourEmail": "សូមបញ្ចូលអ៊ីមែលរបស់អ្នក",
+    "enterYourPasseord": "សូមបញ្ចូលពាក្យសម្ងាត់របស់អ្នក"
   }
 }
