--- a/src/locales/kh/app.json
+++ b/src/locales/kh/app.json
@@ -1,19 +1,17 @@
 {
-  "name": "Booking Now",
-  "currency": "$",
+  "name": "Digital Audit Report Preparation Software",
   "nav": {
     "home": "ទំព័រដើម",
-    "product": "ទំនិញ",
-    "category": "ប្រភេទ",
-    "table": "លេខតុ",
-    "staff": "បុគ្គលិក",
-    "sale": "ការលក់",
-    "money": "ចំណូល",
-    "order": "បញ្ជាទិញ"
+    "draftAuditReport": "សេចក្តីព្រាងរបាយការណ៍សវនកម្ម",
+    "preliminaryAuditReport": "សេចក្តីព្រាងបឋមរបាយការណ៍សវនកម្ម",
+    "auditReport": "របាយការណ៍សវនកម្ម",
+    "regulator": "និយ័តករ",
+    "users": "គ្រប់គ្រងអ្នកប្រើប្រាស់",
+    "roles": "អនុញ្ញាតតួនាទី"
   },
   "rules": {
     "required": "ទាមទារបំពេញ",
-    "email": "អ៊ីមែលមិនត្រឹមត្រូវ",
+    "invalidEmail": "អ៊ីមែលមិនត្រឹមត្រូវ",
     "loginFail": "អ៊ីមែលឬពាក្យសំងាត់មិនត្រឹមត្រូវ"
   },
   "btn": {
@@ -24,51 +22,5 @@
     "close": "បិទចោល",
     "cancel": "បោះបង់",
     "confirm": "យល់ព្រម"
-  },
-  "dialog": {
-    "tips": "ព័ត៌មានជំនួយ"
-  },
-  "header": {
-    "sitting": {
-      "manageStore": "គ្រប់គ្រងហាង",
-      "manageAcc": "គ្រប់គ្រងគណនី",
-      "password": "ប្ដូរ​ពាក្យសំងាត់"
-    }
-  },
-  "crud": {
-    "product": {
-      "all": "ទាំងអស់",
-      "title": "គ្រប់គ្រងទំនិញ",
-      "summary": "សង្ខេបទំនិញ"
-    },
-    "category": {
-      "title": "គ្រប់គ្រងប្រភេទ",
-      "summary": "សង្ខេបប្រភេទ",
-      "form": {
-        "title": "បង្កើតប្រភេទថ្មី",
-        "name": "ឈ្មោះ"
-      }
-    },
-    "table": {
-      "title": "Table management",
-      "summary": "Product Summary"
-    },
-    "staff": {
-      "title": "Staff management",
-      "person": "នាក់",
-      "people": "នាក់"
-    },
-    "sale": {
-      "title": "Sale management",
-      "summary": "Product Summary"
-    },
-    "money": {
-      "title": "Money management",
-      "summary": "Product Summary"
-    }
-  },
-  "total": "សរុប",
-  "item": "ធាតុ",
-  "items": "ធាតុ",
-  "noData": "មិនមានទិន្នន័យទេ"
+  }
 }
