--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -7,11 +7,17 @@
   "forget": {
     "forget": "Forget password?",
     "clickHere": "Click here",
-    "title": "Forget password",
+    "title": "Forget password?",
     "subTitle": "Enter your {email} to send link to reset your password.",
     "success": "We have sent a reset password to your email address",
     "send": "Send",
     "back": "Back to login"
+  },
+  "resetPassword":{
+    "title":"Reset New Password",
+    "newPassword":"New Password",
+    "confirmPassword":"Confirm Password",
+    "reset":"Reset"
   },
   "rules": {
     "enterYourEmail": "Please enter your email",
