feature(auth): forgot password

--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -5,9 +5,9 @@
   "password": "Enter your password",
   "logout": "Logout",
   "forget": {
-    "forget": "Forget password?",
+    "forget": "Forgot password?",
     "clickHere": "Click here",
-    "title": "Forget password?",
+    "title": "Forgot password?",
     "subTitle": "Enter your {email} to send link to reset your password.",
     "success": "We have sent a reset password to your email address",
     "send": "Send",
