--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -17,7 +17,17 @@
     "title":"Reset New Password",
     "newPassword":"New Password",
     "confirmPassword":"Confirm Password",
-    "reset":"Reset"
+    "reset":"Reset",
+    "changeTitle": "Change new password",
+    "changeFor": "Reset new password for",
+    "currentPassword": "Current password",
+    "back": "Go back"
+  },
+  "messages": {
+    "passwordNotMatch": "Passwords do not match",
+    "passwordUsed": "Password is already used",
+    "passwordChanged": "Password changed successful",
+    "linkExpired": "Invalid or expired reset link"
   },
   "rules": {
     "enterYourEmail": "Please enter your email",
