--- a/src/locales/kh/app.json
+++ b/src/locales/kh/app.json
@@ -1,13 +1,18 @@
 {
-  "name": "Digital Audit Report Preparation Software",
+  "name": "កម្មវិធីរៀបចំរបាយការណ៍សវនកម្មឌីជីថល",
   "nav": {
     "home": "ទំព័រដើម",
+    "reports": "របាយការណ៍",
     "draftAuditReport": "សេចក្តីព្រាងរបាយការណ៍សវនកម្ម",
-    "preliminaryAuditReport": "សេចក្តីព្រាងបឋមរបាយការណ៍សវនកម្ម",
+    "primaryAuditReport": "សេចក្តីព្រាងបឋមរបាយការណ៍សវនកម្ម",
     "auditReport": "របាយការណ៍សវនកម្ម",
     "regulator": "និយ័តករ",
     "users": "គ្រប់គ្រងអ្នកប្រើប្រាស់",
-    "roles": "អនុញ្ញាតតួនាទី"
+    "roles": "អនុញ្ញាតតួនាទី",
+    "requestReview": "រង់ចាំការពិនិត្យ",
+    "approved": "យល់ព្រម​អនុម័ត",
+    "rejected": "បដិសេធ",
+    "profile": "ព័ត៌មានផ្ទាល់ខ្លួន"
   },
   "rules": {
     "required": "ទាមទារបំពេញ",
@@ -17,10 +22,42 @@
   "btn": {
     "add": "បន្ថែម​ទៀត",
     "save": "រក្សាទុក",
-    "edit": "កែ",
+    "edit": "កែតម្រូវ",
     "delete": "លុប",
-    "close": "បិទចោល",
+    "close": "ចាកចេញ",
     "cancel": "បោះបង់",
-    "confirm": "យល់ព្រម"
+    "yes": "បាទ/ចាស៎",
+    "confirm": "យល់ព្រម",
+    "clear": "ជម្រះ",
+    "create": "បង្កើត",
+    "filter": "តម្រង",
+    "move": "ផ្លាស់ទី",
+    "send": "ផ្ញើ",
+    "view": "មើល",
+    "approve": "យល់ព្រម",
+    "reject": "បដិសេធ",
+    "next": "បន្ទាប់",
+    "update": "ធ្វើបច្ចុប្បន្នភាព",
+    "change": "ផ្លាស់ប្តូរ"
+  },
+  "confirm": {
+    "deleteTitle": "បញ្ជាក់ការលុប",
+    "deleteText": "តើអ្នកប្រាកដជាលុបវាចោលមែនទេ?"
+  },
+  "messages": {
+    "saveSuccess": "បានរក្សាទុកដោយជោគជ័យ",
+    "updateSuccess": "បានធ្វើបច្ចុប្បន្នភាពដោយជោគជ័យ",
+    "deleteSuccess": "បានលុបដោយជោគជ័យ",
+    "sentSuccess": "បានផ្ញើដោយជោគជ័យ",
+    "errorOccurred": "មានកំហុសកើតឡើង។ សូមព្យាយាមម្តងទៀត។"
+  },
+  "table": {
+    "itemsPerPage": "ធាតុក្នុងមួយទំព័រ:",
+    "noData": "មិនមានទិន្នន័យ",
+    "loading": "កំពុងផ្ទុក..."
+  },
+  "lang": {
+    "kh": "ភាសាខ្មែរ​ (កម្ពុជា)",
+    "en": "អង់គ្លេស​ (សហរដ្ឋអាមេរិក)"
   }
 }
