--- a/src/locales/kh/auth.json
+++ b/src/locales/kh/auth.json
@@ -11,7 +11,23 @@
     "subTitle": "វាយ{email}ដើម្បីផ្ញើតំណដើម្បីកំណត់ពាក្យសម្ងាត់របស់អ្នកឡើងវិញ",
     "success": "កំណត់ពាក្យសម្ងាត់ឡើងវិញបានផ្ញើរួចហើយ។ សូមពិនិត្យមើលអ៊ីមែល។",
     "send": "ផ្ញើរ",
-    "back": "ថយក្រោយ"
+    "back": "ចូលគណនី"
+  },
+  "resetPassword":{
+    "title":"ប្ដូរពាក្យសម្ងាត់ថ្មីឡើងវិញ",
+    "newPassword":"ពាក្យសម្ងាត់ថ្មី",
+    "confirmPassword":"បញ្ជាក់ពាក្យសម្ងាត់",
+    "reset":"ផ្លាស់ប្ដូរ",
+    "changeTitle": "ផ្លាស់ប្តូរពាក្យសម្ងាត់ថ្មី",
+    "changeFor": "កំណត់ពាក្យសម្ងាត់ថ្មីឡើងវិញសម្រាប់",
+    "currentPassword": "ពាក្យសម្ងាត់បច្ចុប្បន្ន",
+    "back": "ត្រឡប់ក្រោយ"
+  },
+  "messages": {
+    "passwordNotMatch": "ពាក្យសម្ងាត់មិនតដូចគ្នា",
+    "passwordUsed": "ពាក្យសម្ងាត់ត្រូវបានប្រើរួចហើយ",
+    "passwordChanged": "បានផ្លាស់ប្តូរពាក្យសម្ងាត់ដោយជោគជ័យ",
+    "linkExpired": "តំណភ្ជាប់កំណត់ពាក្យសម្ងាត់ឡើងវិញមិនត្រឹមត្រូវ ឬផុតកំណត់"
   },
   "rules": {
     "enterYourEmail": "សូមបញ្ចូលអ៊ីមែលរបស់អ្នក",
