--- a/src/locales/kh/auth.json
+++ b/src/locales/kh/auth.json
@@ -5,9 +5,9 @@
   "password": "ពាក្យសម្ងាត់",
   "logout": "ចាកចេញ",
   "forget": {
-    "forget": "ភ្លេច​ពាក្យសំងាត់​?",
+    "forget": "ភ្លេច​ពាក្យសម្ងាត់​?",
     "clickHere": "ចុចទីនេះ",
-    "title": "ភ្លេច​ពាក្យសំងាត់",
+    "title": "ភ្លេចពាក្យសម្ងាត់",
     "subTitle": "វាយ{email}ដើម្បីផ្ញើតំណដើម្បីកំណត់ពាក្យសម្ងាត់របស់អ្នកឡើងវិញ",
     "success": "កំណត់ពាក្យសម្ងាត់ឡើងវិញបានផ្ញើរួចហើយ។ សូមពិនិត្យមើលអ៊ីមែល។",
     "send": "ផ្ញើរ",
