--- a/src/locales/kh/auth.json
+++ b/src/locales/kh/auth.json
@@ -24,7 +24,7 @@
     "back": "ត្រឡប់ក្រោយ"
   },
   "messages": {
-    "passwordNotMatch": "ពាក្យសម្ងាត់មិនតដូចគ្នា",
+    "passwordNotMatch": "ពាក្យសម្ងាត់មិនដូចគ្នា",
     "passwordUsed": "ពាក្យសម្ងាត់ត្រូវបានប្រើរួចហើយ",
     "passwordChanged": "បានផ្លាស់ប្តូរពាក្យសម្ងាត់ដោយជោគជ័យ",
     "linkExpired": "តំណភ្ជាប់កំណត់ពាក្យសម្ងាត់ឡើងវិញមិនត្រឹមត្រូវ ឬផុតកំណត់"
