fix(report): change kh locale

--- a/src/locales/kh/report.json
+++ b/src/locales/kh/report.json
@@ -5,7 +5,7 @@
     "fields": {
         "id": "លេខ",
         "name": "ឈ្មោះរបាយការណ៍",
-        "regulator": "និយតករ",
+        "regulator": "និយ័តករ",
         "priority": "អាទិភាព",
         "progress": "វឌ្ឍនភាព",
         "startDate": "កាលបរិច្ឆេទចាប់ផ្តើម",
