fix(report): change locale

--- a/src/locales/kh/report.json
+++ b/src/locales/kh/report.json
@@ -17,7 +17,7 @@
         "creationDate": "កាលបរិច្ឆេទបង្កើត",
         "createdAt": "កាលបរិច្ឆេទបង្កើត",
         "updatedAt": "កាលបរិច្ឆេទបង្កើត",
-        "user": "សរនករ",
+        "user": "សវនករ",
         "requestedAt": "កាលបរិច្ឆេទស្នើសុំ",
         "reason": "ហេតុផល (មិនទាមទារ)"
     },
