feat(report): update language

--- a/src/locales/en/report.json
+++ b/src/locales/en/report.json
@@ -27,6 +27,12 @@
     "btn": {
         "sendRequestReview": "Send request review"
     },
+    "priority": {
+        "critical": "Critical",
+        "high": " High",
+        "midium": "Midium",
+        "low": "Low"
+    },
     "confirm": {
         "sendRequestReviewTitle": "Confirm send request review",
         "sendRequestReviewText": "Are you sure to send request review?",
