--- a/src/locales/kh/app.json
+++ b/src/locales/kh/app.json
@@ -11,7 +11,7 @@
     "roles": "អនុញ្ញាតតួនាទី",
     "requestReview": "រង់ចាំការពិនិត្យ",
     "approved": "យល់ព្រម​អនុម័ត",
-    "rejected": "បដិសេធ",
+    "rejected": "បដិសេដ",
     "profile": "ព័ត៌មានផ្ទាល់ខ្លួន"
   },
   "rules": {
@@ -34,8 +34,8 @@
     "move": "ផ្លាស់ទី",
     "send": "ផ្ញើ",
     "view": "មើល",
-    "approve": "យល់ព្រម",
-    "reject": "បដិសេធ",
+    "approve": "យល់ព្រម​អនុម័ត",
+    "reject": "បដិសេដ",
     "next": "បន្ទាប់",
     "update": "ធ្វើបច្ចុប្បន្នភាព",
     "change": "ផ្លាស់ប្តូរ"
