--- a/src/locales/kh/home.json
+++ b/src/locales/kh/home.json
@@ -1,6 +1,6 @@
 {
   "waitingReview": "រង់ចាំការពិនិត្យ",
-  "rejected": "បានបដិសេធ",
+  "rejected": "បានបដិសេដ",
   "approved": "យល់ព្រម​អនុម័ត",
   "report": "របាយការណ៍",
   "reports": "របាយការណ៍",
