feat(report): update language

--- a/src/locales/en/report.json
+++ b/src/locales/en/report.json
@@ -30,7 +30,7 @@
     "priority": {
         "critical": "Critical",
         "high": " High",
-        "midium": "Midium",
+        "medium": "Medium",
         "low": "Low"
     },
     "confirm": {
